--- a/pages/book_details.html
+++ b/pages/book_details.html
@@ -21,7 +21,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <title>
-    Students
+    Book - Details
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="./books.html">
+          <a class="nav-link active" href="./books.html">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-books text-info text-sm opacity-10"></i>
             </div>
@@ -75,9 +75,9 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="./pages/rtl.html">
+          <a class="nav-link " href="./pages/rtl.html">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-s text-danger text-sm opacity-10"></i>
+              <i class="ni ni-world-2 text-danger text-sm opacity-10"></i>
             </div>
             <span class="nav-link-text ms-1">Students</span>
           </a>
@@ -97,18 +97,16 @@
     </div>
     
   </aside>
-    
-  </aside>
   <main class="main-content position-relative border-radius-lg ">
     <!-- Navbar -->
     <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur" data-scroll="false">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-            <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;">Pages</a></li>
-            <li class="breadcrumb-item text-sm text-white active" aria-current="page">Books</li>
+            <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;">Books</a></li>
+            <li class="breadcrumb-item text-sm text-white active" aria-current="page">Details</li>
           </ol>
-          <h6 class="font-weight-bolder text-white mb-0">Borrowed History</h6>
+          <h6 class="font-weight-bolder text-white mb-0">Books Details</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -131,60 +129,47 @@
     <div class="container-fluid py-4">
       <div class="row">
         <div class="col-12">
-          <div class="card mb-4">
-            <div class="card-header pb-0">
-              <h1 class="display-4">Students List</h1>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <input type="text" class="form-control"/>
-              </div>
-            </div>
-            <div class="card-body px-0 pt-0 pb-2">
-              <div class="table-responsive p-0">
-                <table class="table align-items-center mb-0">
-                  <thead>
-                    <tr>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Borrowed Books</th>
-                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Action</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                          <div>
-                            <img src="../assets/img/team-2.jpg" class="avatar avatar-sm  me-3 ">
-                          </div>
-                          <div class="d-flex flex-column justify-content-center">
-                            <h6 class="mb-0 text-sm"><a href="">Full Name</a></h6>
-                            <p class="text-xs text-secondary mb-0">email@mail.com</p>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="align-middle text-center text-sm">
-                        <p class="mb-0 text-sm">1</p>
-                      </td>
-                      <td class="align-middle">
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <div class="m-3 ">
-                  <ul class="pagination">
-                    <li class="page-item disabled">
-                      <a class="page-link"> < </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item active" aria-current="page">
-                      <a class="page-link" href="#">2</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                      <a class="page-link" href="#">></a>
-                    </li>
-                  </ul>
+          <div class="mt-4 gap-2">
+            <div class="mb-lg-0 mb-4" >
+              <div class="card h-100" style="min-height: auto;">
+                <div class="card-header pb-0">
+                  <h4>Details</h4>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img src="https://books.google.com/books/content/images/frontcover/YWdrcDqvjdwC?w=300&usc=0" alt="" style="width: 100%;">
+                    </div>
+                    <div class="col-md-9">
+                      <h6 class="text-capitalize" style="font-size: 24px;">Managing Risk</h6>
+                      <div class="d-flex flex-row">
+                        <div>a</div>
+                        <div>a</div>
+                        <div>a</div>
+                      </div>
+                    </div>
+                  </div>
+                  <hr class="horizontal dark">
+                  <div class="row">
+                    <div class="col-12 table-responsive">
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th>No.</th>
+                            <th>Borrowed Data</th>
+                            <th>Return Date</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>1. </td>
+                            <td>December 1, 2022</td>
+                            <td>December 30, 2022</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
